Fixing image on mobile

--- a/style.css
+++ b/style.css
@@ -309,7 +309,4 @@ footer .social-links a:hover {
   h4 {
     font-size: 10px;
   }
-  .patricia {
-    width: 100%;
-  }
 }
